# chat-transformers

./: .gitignore  Makefile  README.md  device.py  gptq_hello.py  langchain_retrieval.py  main.py  ollama_hello.py  pyproject.toml  vllm_bitsandbytes.py
text/: compatibility_supported_file_formats.txt
