[tool.poetry]
name = "chat-transformers"
version = "0.1.0"
description = ""
authors = ["tamakiii <tamakiii@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
torch = "^2.2.2"
transformers = "^4.39.3"
sentencepiece = "^0.2.0"
protobuf = "^5.26.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
